--- a/symfony/lock/5.2/manifest.json
+++ b/symfony/lock/5.2/manifest.json
@@ -5,6 +5,9 @@
     "env": {
         "#1": "Choose one of the stores below",
         "#2": "postgresql+advisory://db_user:db_password@localhost/db_name",
-        "LOCK_DSN": "flock"
-    }
+        "LOCK_DSN": "flock:///%kernel.project_dir%/var/lock"
+    },
+    "gitignore": [
+        "/var/lock"
+    ]
 }
